2008-11-12  William Cohen  <wcohen@redhat.com>

	* context.stp: Remove cpuid() documentation.

2008-10-28  William Cohen  <wcohen@redhat.com>

	* vfs.stp (vfs.(read|write){.return}): Add inode variable, ino.
	
2008-10-28  David Smith  <dsmith@redhat.com>

	PR6972
	* vfs.stp (generic.fop.aio_read): Works under 2.6.18 kernels, such
	as RHEL5.
	(generic.fop.aio_read.return): Ditto.
	(vfs.__set_page_dirty_buffers): Fixed small bug.
	(_vfs.block_write_begin): Only use for kernels >= 2.6.24.
	(_vfs.block_write_begin.return): Ditto.
	(_vfs.block_write_end): Ditto.
	(_vfs.block_write_end.return): Ditto.

2008-10-28  Wenji Huang <wenji.huang@oracle.com>

	* ioblock.stp (ioblock.request, ioblock.end): Correct for 2.6.28.
	* scsi.stp (scsi_timer_pending): Ditto.

2008-10-27  William Cohen  <wcohen@redhat.com>

	* vfs.stp (vfs.(read|write){.return}): Add dev and devname variables.

2008-10-23  Mark Wielaard  <mjw@redhat.com>

	* syscalls2.stp (syscall.utime): Don't use pointer_arg to fetch
	arguments.
	(syscall.compat_utime): Likewise.

2008-10-07  Mark Wielaard  <mjw@redhat.com>

	* aux_syscalls.stp (_stp_sigaction_str): New embedded C function.
	(_struct_sigaction_u): Call _stp_sigaction_str.
	(_struct_sigaction32_u): New function.
	* syscalls2.stp (syscall.rt_sigaction32): Call _struct_sigaction32_u.

2008-09-23  Zhaolei  <zhaolei@cn.fujitsu.com>

	* socket.stp (socket.aio_read/write): Fix version-checking method.

2008-09-22  Zhaolei  <zhaolei@cn.fujitsu.com>

	* socket.stp (socket.aio_read/write): Fix the semantic error
	caused by the difference of kernel versions.

2008-09-18  Mark Wielaard  <mjw@redhat.com>

	* aux_syscalls.stp (_reboot_magic_str): Moved reboot.h include out.

2008-09-17  Mark Wielaard  <mjw@redhat.com>

	* aux_syscalls.stp: Removed commented out code. Removed unneeded
	unpure embedded C-code.

2008-09-15  Mark Wielaard  <mjw@redhat.com>

	* x86_64/syscalls.stp (syscall.vm86_warning): Add argstr.

2008-09-15  Mark Wielaard  <mjw@redhat.com>
