@@ -8,6 +8,7 @@
 <xi:include href="Preface.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
 <xi:include href="Introduction.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
 <xi:include href="context.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
+<xi:include href="memory.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
 <xi:include href="networking.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
 <xi:include href="timestamp.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
 <xi:include href="Revision_History.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
